# ripples

./: .gitignore  CMakeLists.txt  LICENSE.md  ripple.wrapper  snapcraft.yaml
.bzr/checkout/: dirstate
debian/: changelog  control  copyright  rules
game1/: CMakeLists.txt
game1/src/: main.cpp
launchers/: checkroot.sh  daemon.sh  desktop.sh  frame-desktop.sh
readmes/: README-desktop  README-launch-args
snap/: snapcraft.yaml
src/: CMakeLists.txt
src/game1/: CMakeLists.txt
src/game1/src/: main.cpp
wrapper/: run.sh
