set(EXE ripples)
include_directories(${SDL2_IMAGE_INCLUDE_DIR})
include(FindPkgConfig)
pkg_check_modules(SDL2_GFX REQUIRED SDL2_gfx)
pkg_check_modules(SDL2_TTF REQUIRED SDL2_ttf)
include_directories(${SDL2_GFX_INCLUDE_DIRS})
add_executable(${EXE} src/main.cpp)
target_link_libraries(${EXE} ${SDL2_LIBRARY} ${SDL2_GFX_LIBRARIES} ${SDL2_TTF_LIBRARIES})
install(TARGETS ${EXE} RUNTIME DESTINATION bin/)

